<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Story App</string>
    <string name="signup">Daftar</string>
    <string name="login">Masuk</string>
    <string name="message_welcome_page">Mau belajar Android, iOS, Machine Learning, Cloud, Front-End, Back-End, dan bidang IT lainnya? Di Dicoding aja!</string>
    <string name="title_welcome_page">Selamat datang di Dicoding!</string>
    <string name="title_signup_page">Register</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="message_login_page">Masukkan dulu datamu ya</string>
    <string name="title_login_page">Login</string>
    <string name="name">Nama</string>
    <string name="message_main_page">Selamat Belajar di Dicoding.</string>
    <string name="greeting">Halo %1$s,</string>
    <string name="logout">Keluar</string>
    <string name="camera">Camera</string>
    <string name="camera_x">Camera X</string>
    <string name="gallery">Gallery</string>
    <string name="upload">Upload</string>
    <string name="TitleText">Your title goes here</string>
    <string name="SubtitleText">Your beautiful description goes here</string>
    <string name="app_title">- Story App -</string>
    <string name="caption">Share Your Story, \nAnytime 📷📝 #StoryApp</string>
    <string name="don_t_have_an_account_click_here">Don\'t have an account? Click here.</string>
    <string name="already_have_an_account_click_here">Already have an account? Click here.</string>
    <string name="sign_up_to_continue">Sign up to continue.</string>
    <string name="mugshot">Mugshot</string>
    <string name="sign_in_to_continue">Sign in to continue.</string>
    <string name="silahkan_masukkan_deskripsi_anda">Silahkan masukkan deskripsi anda</string>
    <string name="peta">Peta</string>
    <string name="title_activity_maps">MapsActivity</string>

    <string name="normal">Normal</string>
    <string name="satellite">Satellite</string>
    <string name="terrain">Terrain</string>
    <string name="hybrid">Hybrid</string>
    <string name="retry">Retry</string>
    <string name="errorPassword">Password tidak boleh kurang dari 8 karakter"</string>
    <string name="errorEmail">Masukkan email yang valid"</string>


</resources>